--- a/formulario.html
+++ b/formulario.html
@@ -11,18 +11,19 @@
 <body>
     <header>
       <img width="100" src="./images/issu.jpg" alt="logo mailchimp" /><label class="label-header" >
-        Already a user<br><a href="http://www.mailchimp.com">Sign  in</a>
+        Already a user?<br><a href="http://www.mailchimp.com">Sign  in</a>
 
       </label>
       
       <hr>
     </header>
+    <main>
     <div class="form-container">
       <form method="get" action="formulario.html">
         <h1>Create an issuu Acount.</h1>
         <div class="form-group">
           <button type="submit" class="button-google"><img width="30px" src="./images/google.jpg" >Sign in with google</button> 
-          <button type="submit" class="button-facebook"><img width="30px" src="./images/facebook.jpg" >Sign in with facebook</button>
+          <button type="submit" class="button-facebook"><img width="30px" src="./images/facebook.jpg" ><label>Sign in with facebook</label></button>
 
 
         </div>
@@ -47,9 +48,9 @@
         <button type="submit"class="button-acount">CREATE ACOUNT</button>
        </div> 
     </div>
-
+  </main>
     <footer class="footer-container">
-<p><hr>fgdfdfg</p>
+<p><hr>terms  privacy  DMCA</p>
     </footer>   
 </body>
 
